--- a/33-Web-development/general/flask/8-flask-full-website-with-JINJA/templates/index.html
+++ b/33-Web-development/general/flask/8-flask-full-website-with-JINJA/templates/index.html
@@ -18,22 +18,26 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
 
-                    {% for post in all_posts: %}
-                        <!-- Post preview-->
-                        <div class="post-preview">
-                            <a href="{{ url_for('get_post', post_id=post.id) }}">
-                                <h2 class="post-title">{{ post.title }}</h2>
-                                <h3 class="post-subtitle">{{ post.subtitle }}</h3>
-                            </a>
-                            <p class="post-meta">
-                                Posted by
-                                <a href="#!">{{ post.author }}</a>
-                                on {{ post.date }}
-                            </p>
-                        </div>
-                        <!-- Divider-->
-                        <hr class="my-4" />
-                    {% endfor %}
+                    {% if all_posts %}
+                        {% for post in all_posts: %}
+                            <!-- Post preview-->
+                            <div class="post-preview">
+                                <a href="{{ url_for('get_post', post_id=post.id) }}">
+                                    <h2 class="post-title">{{ post.title }}</h2>
+                                    <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+                                </a>
+                                <p class="post-meta">
+                                    Posted by
+                                    <a href="#!">{{ post.author }}</a>
+                                    on {{ post.date }}
+                                </p>
+                            </div>
+                            <!-- Divider-->
+                            <hr class="my-4" />
+                        {% endfor %}
+                    {% else %}
+                        <p>No posts yet!</p>
+                    {% endif %}
 
                     <!-- Pager-->
                     <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
