--- a/33-Web-development/general/django/3-2-backend-views/project-example/sub-app/templates/recipes/index.html
+++ b/33-Web-development/general/django/3-2-backend-views/project-example/sub-app/templates/recipes/index.html
@@ -7,8 +7,8 @@
     {% if recipes %}
         
         <ul>
-            {% for recipe in recipes %}
-                <li><a href="{% url 'recipes:detail_view' recipe.id %}">{{ recipe }}</a></li>
+            {% for i in recipes %}
+                <li><a href="{% url 'recipes:detail_view' i.id %}">{{ i }}</a></li>
             {% endfor %}
         </ul>
 
