--- a/33-Web-development/general/django/project-examples/proj-common/sub-app/templates/recipes/recipe.html
+++ b/33-Web-development/general/django/project-examples/proj-common/sub-app/templates/recipes/recipe.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Recipe example{% endblock %}
+
 {% block content %}
     
     <small>Recipe:</small>
@@ -11,4 +13,4 @@
     <h2>Ingredients:</h2>
     <p>{{ recipe.ingredients }}</p>
 
-{% endblock content %}
+{% endblock %}
