--- a/33-Web-development/general/django/project-examples/proj-same-page-viewer-and-edition/sub-app/templates/movies/movie.html
+++ b/33-Web-development/general/django/project-examples/proj-same-page-viewer-and-edition/sub-app/templates/movies/movie.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ title }}{% endblock title %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
     
@@ -17,4 +17,4 @@
         <a href="{% url 'movies:movie_list_view' %}">Cancel</a>
     </form>
     
-{% endblock content %}
+{% endblock %}
