--- a/33-Web-development/general/django/project-examples/proj-same-page-viewer-and-edition/sub-app/templates/movies/movie_list.html
+++ b/33-Web-development/general/django/project-examples/proj-same-page-viewer-and-edition/sub-app/templates/movies/movie_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}MOVIES{% endblock title %}
+{% block title %}MOVIES{% endblock %}
 
 {% block content %}
     <h1>MOVIES</h1>
@@ -16,4 +16,4 @@
         <p><a href="{% url 'movies:movie_add_view' %}">Create your first movie record!</a></p>
     {% endif %}
     
-{% endblock content %}
+{% endblock %}
