--- a/33-Web-development/general/django/project-examples/proj-common/sub-app/templates/recipes/index.html
+++ b/33-Web-development/general/django/project-examples/proj-common/sub-app/templates/recipes/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Index example{% endblock %}
+
 {% block content %}
     
     <h1>Recipes:</h1>
@@ -18,4 +20,4 @@
 
     {% endif %}
     
-{% endblock content %}
+{% endblock %}
