--- a/33-Web-development/general/django/project-examples/proj-multi-step-form/sub-app/templates/movies/movie_step_one.html
+++ b/33-Web-development/general/django/project-examples/proj-multi-step-form/sub-app/templates/movies/movie_step_one.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ page_title }}{% endblock title %}
+{% block title %}{{ page_title }}{% endblock %}
 
 {% block content %}
     
@@ -21,4 +21,4 @@
         {% endif %}    
     </form>
     
-{% endblock content %}
+{% endblock %}
