--- a/33-Web-development/general/django/project-examples/proj-multi-step-form/sub-app/templates/movies/movie_step_two.html
+++ b/33-Web-development/general/django/project-examples/proj-multi-step-form/sub-app/templates/movies/movie_step_two.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ page_title }}{% endblock title %}
+{% block title %}{{ page_title }}{% endblock %}
 
 {% block content %}
     
@@ -18,4 +18,4 @@
         <button type="submit" name="discard_draft">{{ bt_discard }}</button>
     </form>
     
-{% endblock content %}
+{% endblock %}
