--- a/33-Web-development/general/django/project-examples/proj-multi-step-form/sub-app/templates/movies/movies.html
+++ b/33-Web-development/general/django/project-examples/proj-multi-step-form/sub-app/templates/movies/movies.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}MOVIES{% endblock title %}
+{% block title %}MOVIES{% endblock %}
 
 {% block content %}
     <h1>MOVIES</h1>
@@ -14,4 +14,4 @@
         <p>No movie records available yet.</p>
     {% endif %}
     <p><a href="{% url 'sandbox:movie_step_one' %}">Add New Movie</a></p>
-{% endblock content %}
+{% endblock %}
