--- a/33-Web-development/general/django/project-examples/proj-multi-step-form/sub-app/templates/movies/list.html
+++ b/33-Web-development/general/django/project-examples/proj-multi-step-form/sub-app/templates/movies/list.html
@@ -7,11 +7,15 @@
     {% if movies %}
         <u>
             {% for movie in movies %}
-                <li><a href="{% url 'sandbox:movie_step_one' movie.pk %}">{{ movie.name }} ({{ movie.released_year }})</a></li>
+                <li>
+                    <a href="{% url 'movies:step_one_view' movie.pk %}">
+                        {{ movie.name }} ({{ movie.released_year }})
+                    </a>
+                </li>
             {% endfor %}
         </u>
     {% else %}
         <p>No movie records available yet.</p>
     {% endif %}
-    <p><a href="{% url 'sandbox:movie_step_one' %}">Add New Movie</a></p>
+    <p><a href="{% url 'movies:step_one_view' %}">Add New Movie</a></p>
 {% endblock %}
