--- a/33-Web-development/general/django/12-error-pages/401/templates/401.html
+++ b/33-Web-development/general/django/12-error-pages/401/templates/401.html
@@ -8,7 +8,7 @@
 
     <h1>Unauthorized access</h1>
     <h2>It looks like you're trying to access data that doesn't belong to you.</h2>
-    <p>If you think there's some mistake happening here, please <a href="{% url 'general:contact_view' %}" target="_blank">let us know<a/>.</p>
+    <p>If you think there's some mistake happening here, please <a href="mailto:{{ ADMIN_EMAIL }}?subject={{ BRAND_NAME }}: Error401" target="_blank">let us know<a/>.</p>
     
     <p>
         {% if user.is_authenticated %}
