--- a/33-Web-development/general/django/project-examples/proj-instance-author/templates/base.html
+++ b/33-Web-development/general/django/project-examples/proj-instance-author/templates/base.html
@@ -1,4 +1,8 @@
+<!--
+
+   
+    /33-Web-development/general/django/3-3-frontend-templates/3-base.html
 
 
+-->
 
-fake file. Irrelevant for this example but here only to ilustrate a real Django project structure.
