--- a/33-Web-development/general/django/project-examples/proj-common/templates/base.html
+++ b/33-Web-development/general/django/project-examples/proj-common/templates/base.html
@@ -1,61 +1,8 @@
 <!--
 
-    SNIPPETS OF THIS CODE IS BASED ON BOOTSTRAP, SO CHECK IF IT'S STILL UP TO DATE:
-    https://getbootstrap.com/docs/
+   
+    /33-Web-development/general/django/3-3-frontend-templates/3-base.html
+
 
 -->
 
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Page info -->
-    <title>{% block title %}{% endblock %} | Your Portal Name</title>
-    <meta name="description" content="{% block description %}{% endblock %}">
-    <meta name="author" content="abcoo.com.br">
-    <!-- CSS -->
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-      crossorigin="anonymous"
-    >
-    <link href="/static/css/style.css" rel="stylesheet">
-  </head>
-  <body>
-
-     <!-- NAVBAR - START -->
-     {% include "inc/nav_main.html" %}
-     <!-- NAVBAR - END -->
- 
-     <!-- BODY - START -->
-     <div class="container">
- 
-       {% block content %}
-       {% endblock %}
- 
-     </div>
-     <!-- BODY - END -->
-
-    <!-- FOOTER - START -->
-    <footer class="container text-right">
-      <div class="row">
-          <div class="col-12">
-            
-            {% include "inc/nav_footer.html" %}
-            {% include "inc/copyright.html" %}
-            
-          </div>
-      </div>
-    </footer>
-    <!-- FOOTER - END -->
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-      crossorigin="anonymous"
-    >
-    </script>
-  </body>
-</html>
