--- a/33-Web-development/backend/django/project-examples/proj-exporting-pdf/sub-app/templates/sub-app-name/attack_list.html
+++ b/33-Web-development/backend/django/project-examples/proj-exporting-pdf/sub-app/templates/sub-app-name/attack_list.html
@@ -26,7 +26,7 @@
             </div>
             <div class="column is-4 has-text-centered">
                 <p>
-                    <a href="{% url 'event_attacks:attack_list_pdf' %}"
+                    <a href="{% url 'event_attacks:pdf_name_page_view' %}"
                        class="button is-rounded is-success" target="_blank">
                         {% if attacks %}
                             {% trans "Export report" %}
