--- a/33-Web-development/backend/django/project-examples/proj-aldolammel-style/templates/inc/copyright.html
+++ b/33-Web-development/backend/django/project-examples/proj-aldolammel-style/templates/inc/copyright.html
@@ -1,1 +1,1 @@
-<small>{{ current_year }} © Your Portal Name | Developed by <a href="{% url 'general:developed_view' %}" target="_blank">ABCOO</a></small>
+<small>{{ CURRENT_YEAR }} © Your Portal Name | Developed by <a href="https://dev.aldolammel.com" target="_blank">AL</a></small>
